--- a/Resources/html file/crypto_checkout.html
+++ b/Resources/html file/crypto_checkout.html
@@ -38,7 +38,7 @@
     const title = 'Crypto Checkout'
     const subtitle = '[replace with your tagline]'
     const companyName = 'Build On Story LLC'
-    const n8nUrl = 'https://n8n.srv923451.hstgr.cloud/webhook/41812f8e-58d1-4db3-b5e9-6d31492b2fa0'
+    const n8nUrl = '[YOUR_n8n_ENDPOINT]'
 
     const colorBrand1 = "indigo-600"
 
